--- a/style.css
+++ b/style.css
@@ -1,1 +1,156 @@
-https://codepen.io/domierosina/pen/zvOYBY?page=3
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,900);
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+@-ms-viewport {
+  width: device-width;
+}
+body {
+  font-family: "Lato";
+  font-weight: 300;
+  text-align: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+p {
+  font-size: 1.2em;
+  line-height: 1.67;
+}
+
+a:link, a:visited {
+  text-decoration: underline;
+  color: white;
+}
+a:hover {
+  color: #1ABC9Cf;
+}
+
+.bg {
+  -webkit-animation-duration: 1.2s;
+          animation-duration: 1.2s;
+  -webkit-animation-delay: 0.375s;
+          animation-delay: 0.375s;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  min-width: 100%;
+  min-height: 100%;
+  height: 100vh;
+  background-image: url("http://disegnasacchetta.net/comingbg.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow:none;
+}
+.bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hero {
+  -webkit-animation-delay: 1.75s;
+          animation-delay: 1.75s;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  position: absolute;
+  display: table;
+  width: 100%;
+  height: 100vh;
+}
+.container {
+  text-align: center;
+  max-width: 100%;
+  width: 960px;
+  margin: 0 auto;
+  display: table-cell;
+  vertical-align: middle;
+  width: 80%;
+  height: 50%;
+}
+.coming-soon {
+  font-size: 40px;
+  text-transform: uppercase;
+  width: 70%;
+  margin: 0 auto;
+  border: 3px solid white;
+    padding: 0.8em 1.0em;
+    font-weight: 100;
+    border-radius: 5px;
+    line-height: 1em;
+}
+
+.social {
+  width: 90%;
+  margin: 2% auto;
+}
+@media (max-width: 414px) {
+  .coming-soon {
+    width: 90%;
+    font-size: 1.7rem;
+  }
+}
+.message {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 60%;
+  margin: 5% auto 0 auto;
+}
+@media (max-width: 414px) {
+.message {
+    width: 90%;
+    font-size: 1em;
+  }
+}
+
+
+.social a {
+  color:#fff;
+  text-align:center;
+  text-decoration:none;
+  font-family:fontawesome;
+  position: relative;
+  display: inline-block;
+  width:40px;
+  height:28px;
+  padding-top:12px;
+  margin:0 2px;
+  -o-transition:all .5s;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  transition: all .5s;
+   -webkit-font-smoothing: antialiased;
+}
+
+.social a:hover {
+  color:#1ABC9Cf;
+}
+
+/* font awesome icons */
+
+.social a:nth-of-type(1):before {
+content:'\f09a';
+}
+.social a:nth-of-type(2):before {
+content:'\f099';
+}
+.social a:nth-of-type(3):before {
+content:'\f0e0';
+}
+.social a:nth-of-type(4):before {
+content:'\f16d';
+}
