--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a:hover {
   min-width: 100%;
   min-height: 100%;
   height: 100vh;
-  background-image: url("http://disegnasacchetta.net/comingbg.jpg");
+  background-image: url("http://www.lexikus.de/pics/manager/mittelalter/familienbad.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -92,65 +92,4 @@ a:hover {
     font-weight: 100;
     border-radius: 5px;
     line-height: 1em;
-}
-
-.social {
-  width: 90%;
-  margin: 2% auto;
-}
-@media (max-width: 414px) {
-  .coming-soon {
-    width: 90%;
-    font-size: 1.7rem;
-  }
-}
-.message {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  width: 60%;
-  margin: 5% auto 0 auto;
-}
-@media (max-width: 414px) {
-.message {
-    width: 90%;
-    font-size: 1em;
-  }
-}
-
-
-.social a {
-  color:#fff;
-  text-align:center;
-  text-decoration:none;
-  font-family:fontawesome;
-  position: relative;
-  display: inline-block;
-  width:40px;
-  height:28px;
-  padding-top:12px;
-  margin:0 2px;
-  -o-transition:all .5s;
-  -webkit-transition: all .5s;
-  -moz-transition: all .5s;
-  transition: all .5s;
-   -webkit-font-smoothing: antialiased;
-}
-
-.social a:hover {
-  color:#1ABC9Cf;
-}
-
-/* font awesome icons */
-
-.social a:nth-of-type(1):before {
-content:'\f09a';
-}
-.social a:nth-of-type(2):before {
-content:'\f099';
-}
-.social a:nth-of-type(3):before {
-content:'\f0e0';
-}
-.social a:nth-of-type(4):before {
-content:'\f16d';
 }
